--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,19 +5,19 @@ services:
     build:
       context: .
     ports:
-      8000:5000
+    - 8000:5000
     volumes:
-      ./:/app
+    - ./:/app
 
   mysqldb:
     image: mysql
     ports:
-      3306:3306
+    - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD=password
+      MYSQL_ROOT_PASSWORD: password
     volumes:
-      mysql:/var/lib/mysql
-      mysql_config:/etc/mysql
+    - mysql:/var/lib/mysql
+    - mysql_config:/etc/mysql
 
 volumes:
   mysql:
